Thêm button chatbot

--- a/Web UI/Tab_Thôngbáo/noti.html
+++ b/Web UI/Tab_Thôngbáo/noti.html
@@ -103,7 +103,7 @@
         <div class="notification-content">
           <h2 class="notification-title">Nhắc nhở: Cập nhật địa chỉ Email</h2>
           <p class="notification-description">
-            Nhằm gia tăng tính bảo mật và nghiệm người dùng, quý khách vui lòng cập nhật địa chỉ Email của mình để nhận được những thông báo sớm nhất, cũng như liên tục cập nhật tình trạng đơn hàng.
+            Nhằm gia tăng tính bảo mật và trải nghiệm người dùng, quý khách vui lòng cập nhật địa chỉ Email của mình để nhận được những thông báo sớm nhất, cũng như liên tục cập nhật tình trạng đơn hàng.
           </p>
         </div>
       </article>
