--- a/Web UI/Tab_ChatBot/chat_button.html
+++ b/Web UI/Tab_ChatBot/chat_button.html
@@ -3,21 +3,41 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Chat Bot Button</title>
+  <title>Chatbot Button</title>
   <link rel="stylesheet" href="chat_button.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Lalezar&display=swap" rel="stylesheet" />
 </head>
 <body>
-
-  <button class="chat-bot-button">
-    <div class="chat-bot-content">
-      <img
-        src="https://cdn.builder.io/api/v1/image/assets/TEMP/3a3a43a54b297b3a7452b41e5977db8ccd479b39?placeholderIfAbsent=true&apiKey=4dcf8273c0604e8fbbe56c9306bef8a3"
-        alt="Chat Bot Icon"
-        class="chat-bot-icon"
-      />
-      <span class="chat-bot-text">TECHBOT TƯ VẤN</span>
-    </div>
-  </button>
-
+  <main class="page-container">
+    <section class="chatbot-container">
+      <button class="chatbot-button" aria-label="Open Chat Bot">
+        <svg
+          class="chatbot-icon"
+          width="70"
+          height="60"
+          viewBox="0 0 70 60"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <rect width="70" height="60" rx="15" fill="#EA1A1A"></rect>
+          <path
+            d="M50 18.4286H35H20C17.2386 18.4286 15 20.5605 15 23.1905V42.2381C15 44.868 17.2386 47 20 47H50C52.7614 47 55 44.868 55 42.2381V23.1905C55 20.5605 52.7614 18.4286 50 18.4286Z"
+            fill="#D9D9D9"
+          ></path>
+          <path d="M10 32.7143H15Z" fill="#D9D9D9"></path>
+          <path d="M55 32.7143H60Z" fill="#D9D9D9"></path>
+          <path d="M42.5 30.3333V35.0952Z" fill="#D9D9D9"></path>
+          <path d="M27.5 30.3333V35.0952Z" fill="#D9D9D9"></path>
+          <path
+            d="M35 18.4286H20C17.2386 18.4286 15 20.5605 15 23.1905V42.2381C15 44.868 17.2386 47 20 47H50C52.7614 47 55 44.868 55 42.2381V23.1905C55 20.5605 52.7614 18.4286 50 18.4286H35ZM35 18.4286L39.1667 13.0952L32.0833 7M10 32.7143H15M55 32.7143H60M42.5 30.3333V35.0952M27.5 30.3333V35.0952"
+            stroke="black"
+            stroke-width="3"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          ></path>
+        </svg>
+      </button>
+    </section>
+  </main>
 </body>
 </html>
