--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logo-1.png" />
+    <link rel="icon" type="image/png" href="/srcs/assets/logo/Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HAAD TECH | Trang chủ</title>
   </head>
